fixed a problem with viewport width and x-axis scrollbar

--- a/style.scss
+++ b/style.scss
@@ -40,8 +40,9 @@ body {
     margin: 0;
     padding: 0;
     main {
-        width: 98vw;
-        overflow: hidden;
+        width: 100vw;
+        max-width: 100%;
+        overflow-x: hidden;
         section {
             margin: 0 auto;
             width: 80%;
@@ -80,8 +81,7 @@ body {
     }
     .item::selection {
         background: $accent-color;
-            color: $text-color;
-
+        color: $text-color;
     }
     h1 {
         color: $accent-color;
